# nRF5Cmake

./: .gitignore  CMakeEnv.cmake  CMake_nRF5x_v14_2.cmake  nRF5.cmake  nRF5CustomTargets.cmake  nRF5IncludePaths.cmake  nRF5Sanity.cmake  nRF5SetBuildOptions.cmake  nRF5SoftdeviceDefines.cmake  nRF5Sources.cmake  nRF5SourcesOptional.cmake  nRF5Target.cmake  readme.md  toolchain-gnu-arm.cmake
Examples/: CMakeLists.txt  main.cpp  sdk_config.h
